--- a/main/src/main/resources/templates/login.html
+++ b/main/src/main/resources/templates/login.html
@@ -11,7 +11,8 @@
             justify-content: center;
             align-items: center;
             height: 90vh;
-            background: #bababa;;
+            background: #bababa url("images/london-background.png") no-repeat fixed center center;
+            background-size: cover;
         }
 
         * {
